@startuml
title 図書管理システム（Class Diagram）

class BookManagementController {
    + BookManagementService
}

class BookManagementService {
    + BookManagementDatabase
    + 
}

class BookDatabase {
    + create()
    + read()
    + update()
    + delete()
}

BookManagementController --> BookManagementService
BookManagementService --> BookManagementDatabase


@enduml
